modifications in styles

--- a/CSS/styles.css
+++ b/CSS/styles.css
@@ -1,89 +1,4 @@
-/*index.html*/
-.loginform
-{
-    margin: 0;
-    padding: 0;
-    background: url(img/pic5.jpeg);
-    background-size: cover;
-    background-position: center;
-    font-family: sans-serif;
-    background-repeat: no-repeat;
-    background-position-y: unset;
-}
 
-.loginbox 
-{
-  
-    width: 420px;
-    height: 500px;
-    background: black;
-    color: whitesmoke;
-    top: 50%;
-    left: 70%;
-    position: absolute;
-    transform: translate(-50%,-50%);
-    box-sizing: border-box;
-    padding: 20px 30px;
-}
-
-form{
-    margin-top: 30%;
-    margin-left: 5%;
-    margin-right: 5%;
-}
-
-h1{
-    margin: 0px;
-    padding: 20px 50px 10px;
-    text-align: center;
-    font-size: 35px;
-}
-
-.loginbox p{
-    font-size: 20px;
-    font-weight: bold;
-    margin-bottom: 20px;
-}
-
-.loginbox input{
-    width: 100%;
-    height: auto; 
-    margin-bottom: 20px;
-
-}
-.loginbox input[type="text"], input[type="password"]{
-    border: none;
-    border-bottom: 1px solid #ffff;
-    background: transparent;
-    outline: none;
-    height: 40px;
-    color: #fff;
-    font-size: 16px;
-}
-
-.loginbox input[type="submit"]
-{
-    border: none;
-    outline: none;
-    height: 40px;
-    background: #fb2525;
-    color: #fff;
-    font-size: 18px;
-    margin-top: 18px;
-}
-
-.loginbox input[type="submit"]:hover{
-    cursor:pointer ;
-    background: rgba(20, 238, 0, 0.651);
-    color: #000
-}
-
-.loginbox a{
-    text-decoration: none;
-    font-size: 13px;
-    line-height: 20px;
-    color: darkgray;
-}
 
 /*schangepwd.html*/
 .schangepwd 
@@ -261,7 +176,7 @@ h1{
    
     background: black;
     color: whitesmoke;
-    top: 75%;
+    top: 90%;
     left: 47%;
     position: absolute;
     transform: translate(-50%,-50%);
@@ -278,8 +193,8 @@ h1{
 }
 
 .label1 label{
-    font-size: 30px;
-    color: rgb(219, 122, 58);
+    font-size: 20px;
+    color: rgb(198, 159, 230);
 }
 
 .label1 select{
@@ -289,7 +204,7 @@ h1{
     margin: 10px;
     border: none;
     background-color: transparent;
-    border-bottom: 2px solid black;
+    border-bottom: 2px solid rgb(0, 0, 0);
 }
 .topnav1 {
     background-color: rgb(21, 127, 226);
@@ -337,7 +252,7 @@ a:hover{
 .label1 input[type="submit"]{
     border: none;
     outline: none;
-    height: 50px;
+    height: 44px;
     width: 70px;
     position: absolute;
     top: 110%;
